<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright 2011 Mindless Dribble, Inc. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <include layout="@layout/header_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" />

    <LinearLayout
        android:gravity="center"
        android:background="@drawable/bg_sub_header"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="46dp">

        <TextView
            android:layout_gravity="center"
            android:shadowColor="#FFF"
            android:shadowDx="0"
            android:shadowRadius="1"
            android:text="@string/title_enter_phone_number"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:textSize="22dp"
            android:shadowDy="1"
            android:layout_height="wrap_content" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_weight="1.0"
        android:padding="5dip"
        android:gravity="center_horizontal"
        android:background="@drawable/bg_pattern">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/phone_entry_instructions"
            android:padding="5dp" />
        
        <EditText
            android:id="@+id/phone_number_entry"
            android:maxLines="1"
            android:minLines="1"
            android:inputType="phone"
            android:layout_width="fill_parent"
            android:lines="1"
            android:layout_height="wrap_content"
            android:selectAllOnFocus="true"
            android:hint="@string/hint_usa_phone"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp" />
        
    </LinearLayout>

    <LinearLayout
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:gravity="center"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_bottom_bar"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

        <Button
                android:id="@+id/btn_register_alt"
                android:text="@string/button_verify"
                android:background="@drawable/btn_special"
                style="@style/ShadowedText.Light"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="onPhoneButtonClick" />
        
    </LinearLayout>

</LinearLayout>

