<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright 2011 Mindless Dribble, Inc. All Rights Reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <include layout="@layout/header_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" />

    <LinearLayout
        android:gravity="center"
        android:background="@drawable/bg_sub_header"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="46dp">

        <TextView
            android:id="@+id/group_name_view"
            android:layout_gravity="center"
            android:shadowColor="#FFF"
            android:shadowDx="0"
            android:shadowRadius="1"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:textSize="22dp"
            android:shadowDy="1"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_weight="1.0"
        android:padding="5dip"
        android:gravity="center_horizontal"
        android:background="@drawable/bg_pattern">

        <Button
            android:id="@+id/btn_text_group"
            android:text="@string/button_text_group"
            android:background="@drawable/btn_special"
            style="@style/ShadowedText.Light"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="sendGroupTextMessage" />

        <Button
            android:id="@+id/btn_call_group"
            android:text="@string/button_call_group"
            android:background="@drawable/btn_special"
            style="@style/ShadowedText.Light"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_groupme_open"
            android:text="@string/button_open_group_in_groupme"
            android:background="@drawable/btn_special"
            style="@style/ShadowedText.Light"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="openGroupInGroupMe" />

        <Button
            android:id="@+id/btn_add_address_book"
            android:text="@string/button_add_address_book"
            android:background="@drawable/btn_special"
            style="@style/ShadowedText.Light"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="saveNumberInAddressBook" />
        
    </LinearLayout>
    
</LinearLayout>
        
